--- a/Python_Flask/app/templates/index.html
+++ b/Python_Flask/app/templates/index.html
@@ -9,7 +9,13 @@
     <body>
     <h1>{{ title }}</h1>
     <form action="/" method="POST">
-        <input type="submit" value="Submit" name="Submit">
+        <input type="submit" value="初期表示" name="Initialize">
+    </form>
+    <form action="/" method="PUT">
+        <input type="submit" value="登録" name="Submit", method="PUT">
+        商品名：<input type="text" value="" name="name">
+        原価：<input type="text" value="" name="cost">
+        売価：<input type="text" value="" name="price">
     </form>
       {{ table }}
     </body>
