--- a/Python_Flask/app/templates/users_list.html
+++ b/Python_Flask/app/templates/users_list.html
@@ -11,8 +11,8 @@
         ログインID：{{ login_user }}
         <input type="submit" value="ログアウト" name="logout">
     </form>
-    <tr class='error_message'>
-        <p>{{ error_message }}</p>
+    <tr class='message'>
+        <p>{{ message }}</p>
     </tr>
     <form action="/" method="POST">
         <input type="submit" value="買い物一覧" name="sales_list">
