画面遷移処理を一つにまとめる

--- a/Python_Flask/app/templates/shopping_list.html
+++ b/Python_Flask/app/templates/shopping_list.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     <h1 style="text-align: center">買い物一覧</h1>
-    <form action="/" method="POST" style="text-align: right">
+    <form action="/logout" method="POST" style="text-align: right">
         ログインID：{{ login_user }}
         <input type="submit" value="ログアウト" name="logout">
     </form>
@@ -18,13 +18,13 @@
         <input type="submit" value="CSV取込" name="input">
         <input type="submit" value="CSV出力" name="output">
     </form>
-    <form action="/users_list" method="POST">
+    <form action="/transit" method="POST">
         <input type="submit" value="ユーザ一覧" name="users_list">
     </form>
-    <form action="/shopping_list" method="POST">
+    <form action="/register_shopping_list" method="POST">
         商品名：<input type="text" value="" name="name">
-        購入日：<input type="text" value="" name="date">
-        価格：<input type="text" value="" name="price">
+        購入日：<input type="text" id="datepicker" value="" name="date">
+        金額：<input type="text" value="" name="price">
         <input type="submit" value="登録" name="register">
         <input type="submit" value="更新" name="update">
         <input type="submit" value="削除" name="delete">
