--- a/Python_Flask/app/templates/login.html
+++ b/Python_Flask/app/templates/login.html
@@ -10,6 +10,9 @@
     <tr class='message'>
         <p>{{ message }}</p>
     </tr>
+    <form action="/transit" method="POST">
+        <input type="submit" value="ユーザー登録" name="users_register">
+    </form>
     <form action="/login" method="POST" style="text-align: center">
         ユーザーID：<input type="text" value="" name="user_id">
         パスワード：<input type="text" value="" name="password">
