--- a/Python_Flask/app/templates/users_list.html
+++ b/Python_Flask/app/templates/users_list.html
@@ -14,7 +14,7 @@
     <tr class='message'>
         <p>{{ message }}</p>
     </tr>
-    <form action="/" method="POST">
+    <form action="/shopping_list" method="POST">
         <input type="submit" value="買い物一覧" name="sales_list">
     </form>
         {{ table }}
