--- a/Python_Flask/app/templates/users_list.html
+++ b/Python_Flask/app/templates/users_list.html
@@ -4,19 +4,25 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Cache-Control" content="no-cache">
     <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='index.css') }}"/>
+    <script>
+    function check(){
+        return confirm("ユーザー登録を解除します。よろしいですか？");
+    }
+    </script>
     </head>
     <body>
-    <h1 style="text-align: center">ユーザ一覧</h1>
-    <form action="/" method="POST" style="text-align: right">
-        ログインID：{{ login_user }}
-        <input type="submit" value="ログアウト" name="logout">
+    <h1 style="text-align:center;">ユーザ一覧</h1>
+    <tr style="text-align:left;">ログインID：{{ login_user }}</tr>
+    <form action="/logout" method="POST" style="text-align:right;">
+        <input type="submit" value="ログアウト" name="logout" style="height:30px;width:150px;">
+        <input type="submit" value="ユーザー登録解除" name="cancel_user_registration" onclick="return check()" style="height:30px;width:150px;">
     </form>
     <tr class='message'>
         <p>{{ message }}</p>
     </tr>
-    <form action="/shopping_list" method="POST">
-        <input type="submit" value="買い物一覧" name="sales_list">
-    </form>
-        {{ table }}
-    </body>
+    <form action="/transit" method="POST" style="text-align:right;">
+        <input type="submit" value="買い物一覧画面" name="shopping_list" style="height:30px;width:150px;">
+    <tr style="text-align:center;">
+        <p>{{ table }}</p>
+    </tr>
 </html>
